--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>KittenMingle</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,11 +27,11 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1>KittenMingle</h1>
+					<p>Find the Purrr-fect match</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly scrolly-centered">Find Paw-some results right Meow<br>that are guarenteed to last Furr-ever</a>
 				</footer>
 			</section>
 		
