--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<header>
 						<h2>Betsy and Carlton</h2>
 					</header>
-					<p>These two Tabbys were one of the first couples we matched up.<br> While Betsy, a high school Hiss-tory teacher, is a Tail-ented Meow-tain climber. She was blown away by Carlton's Paw-sitive Cat-itude and thinks his job as a dog-catcher is fascinating. <br>These two feel incredibly Fur-turnate that they have found each other. </p>
+					<p>These two Tabbys were one of the first couples we matched up.<br> While Betsy, a high school Hiss-tory teacher, is a Tail-ented Meow-tain climber. She was blown away by Carlton's Paw-sitive Cat-itude and thinks his job as a dog-catcher is fascinating. <br>These two feel incredibly Fur-tunate that they have found each other. </p>
 				</div>
 			</article>
 		
@@ -120,7 +120,7 @@
 				</form>
 			</article>
 		
-		<section id="footer">
+		<section id="footer">	
 			<div class="copyright">
 				<ul class="menu">
 					<li>&copy; KittenMingle. All rights reserved.</li><li><a href="http://youvegottobekittenme.com">Erik Langert</a></li>
