Alex is a loser

--- a/results.html
+++ b/results.html
@@ -11,6 +11,8 @@
 }	
 		img{
 			position: center;
+			margin-left: auto;
+			margin-right: auto;
 			margin: auto;
 		}
 </style>
@@ -43,7 +45,7 @@
 									<h2>Breed: Tabby</h2>
 									<h2>Number of Lives Left: 1</h2>
 									<h2>Description</h2>
-									<p>Meow meow meow meow meow meow meow meow? Meow meow meow, meow meow meow meow meow meow meow meow “meow” meow meow. Meow meow meow meow meow; meow meow meow meow. Meow. Meow meow meow meow meow Meow, meow meow meow meow 9/11 was an inside job meow meow meow meow. Meow, meow meow meow meow, meow meow meow meow meow meow meow meow meow. Meow meow meow meow meow meow meow. Meow meow meowmeow meow meow meow meow meow meow meow meow meow meow meow meow! Meow. </p>
+									<p>Meow meow meow meow meow meow meow meow? Meow meow meow, meow meow meow meow meow meow meow meow Meow meow meow. Meow meow meow meow meow; meow meow meow meow. Meow. Meow meow meow meow meow Meow, meow meow meow meow 9/11 was an inside job meow meow meow meow. Meow, meow meow meow meow, meow meow meow meow meow meow meow meow meow. Meow meow meow meow meow meow meow. Meow meow meowmeow meow meow meow meow meow meow meow meow meow meow meow meow! Meow. </p>
 								</div>
 								<div id="profile3">
 									<img src="http://media-cache-ak0.pinimg.com/236x/c2/76/78/c2767807194328865eec3b262ee6f6d0.jpg" alt="" />
@@ -70,7 +72,7 @@
 									<h2>Breed: Himalayan</h2>
 									<h2>Number of Lives Left: 4</h2>
 									<h2>Description</h2>
-									<p>Who is Kevin? 64% Introvert, 36% Extrovert. He is an Analytical, kinesthetic thinker and the spotlight is not my friend I dont like planning, so I tend to be very pro spontaneity. I am a shy geek and a smooth operator... thats approximately me.  My favorite food is tuna; one of my favorite things is bellyrubs. A major dislike though is more than 13 bellyrubs, anymore than that and I will bite the living shit out of you :*</p>
+									<p>First and foremost, i’m a stalker.  Lol but not in the creepy way, as in like i’m a hunter.  Im the kind of cat who wants to take charge in a situation. I enjoy being the best at what I do and providing for those who I care about. I would rather be a rock star then a movie star. My personal theory on music, is that it is just pure, emotional communication, have you ever listened to a song in another language but still understood on an emotional level, what the song was trying to express? Music can bring emotions out in us and bring us back to emotions that we felt in the past… it’s a talent that I wish I had, and emotions are really the most addictive chemicals. Thats pretty much me :)</p>
 								</div>
 								<div id="profile6">
 									<img src="http://cuteimagez.com/data_images/out/77/1351654-siamese-cat.jpg" alt="" />
