Other small profile changes

--- a/results.html
+++ b/results.html
@@ -81,7 +81,9 @@
 									<h2>Breed: Siamese</h2>
 									<h2>Number of Lives Left: 8</h2>
 									<h2>Description</h2>
-									<p> First and foremost, im a stalker.  Lol but not in the creepy way, as in like im a hunter.  Im the kind of cat who wants to take charge in a situation. I enjoy being the best at what I do and providing for those who I care about. I would rather be a rock star then a movie star. My personal theory on music, is that it is just pure, emotional communication, have you ever listened to a song in another language but still understood on an emotional level, what the song was trying to express? Music can bring emotions out in us and bring us back to emotions that we felt in the past... its a talent that I wish I had, and emotions are really the most addictive chemicals. Thats pretty much me :)</p>
+									<p>Hi, I’m Wereniqqa. Sorry if my English isn’t so great, I’m not from this country:/ I never quite know how to start these things, so I think I’ll just list a bunch of things that I enjoy: Travel, surprises, music, dancing, sports, books, last minute plans, open mind, photography, museum, craziness, spontaneity, going out (but also staying in), sharing, simplicity, respect, flip flops (yes, the sandals), down to earth (however fantasy is also very important), people, casual, word, news, work, sense of humor about yourself, awareness.
+									I’ve been really big into yarn and meowmix recently, but at my core I really just like having fun
+									</p>
 								</div>
 								<div id="profile7">
 									<img src="http://th00.deviantart.net/fs70/PRE/f/2013/286/4/4/untitled_by_allmeme-d6qa35b.jpg" alt="" />
